<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ious"
            android:icon="@drawable/ic_person_black"
            android:title="@string/nav_my_ious"/>
        <item
            android:id="@+id/nav_pending"
            android:icon="@drawable/ic_whatshot_black"
            android:title="@string/nav_pending_ious"/>
        <item
            android:id="@+id/nav_previous"
            android:icon="@drawable/ic_history_black"
            android:title="@string/nav_previous_ious"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_group_black"
            android:title="@string/nav_friends"/>
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_add_box_black"
            android:title="@string/nav_create_new"/>
    </group>

    <item android:title="@string/nav_settings_title">
        <menu>
            <item
                android:id="@+id/nav_edit_prof"
                android:icon="@drawable/ic_edit_black"
                android:title="@string/nav_edit_profile"/>
            <item
                android:id="@+id/nav_invite"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_send_invite"/>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_reply_black"
                android:title="@string/nav_sign_out"/>
        </menu>
    </item>

</menu>
