<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.wrongwaystudios.iou.SignUpActivity"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:id="@+id/imageView2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ioulogo"
                android:scaleType="fitCenter"
                android:layout_marginTop="32dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                app:met_floatingLabel="highlight"
                app:met_baseColor="#ffffff"
                app:met_primaryColor="#ffffff"
                app:met_textColor="#ffffff"
                app:met_textColorHint="#ffffff"
                app:met_errorColor="#ffffff"
                app:met_helperTextColor="#ffffff"
                app:met_underlineColor="#ffffff"
                app:met_floatingLabelTextColor="#ffffff"
                android:layout_marginTop="65dp"
                android:id="@+id/username_edit"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password_edit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                app:met_floatingLabel="highlight"
                app:met_baseColor="#ffffff"
                app:met_primaryColor="#ffffff"
                app:met_textColor="#ffffff"
                app:met_textColorHint="#ffffff"
                app:met_errorColor="#ffffff"
                app:met_helperTextColor="#ffffff"
                app:met_underlineColor="#ffffff"
                app:met_floatingLabelTextColor="#ffffff"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:layout_below="@+id/username_edit"
                android:layout_centerHorizontal="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password_re_edit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_reenter"
                app:met_floatingLabel="highlight"
                app:met_baseColor="#ffffff"
                app:met_primaryColor="#ffffff"
                app:met_textColor="#ffffff"
                app:met_textColorHint="#ffffff"
                app:met_errorColor="#ffffff"
                app:met_helperTextColor="#ffffff"
                app:met_underlineColor="#ffffff"
                app:met_floatingLabelTextColor="#ffffff"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:layout_below="@+id/password_edit"
                android:layout_alignStart="@+id/password_edit"/>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_sign_up"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                fancy:fb_borderColor="#FFFFFF"
                fancy:fb_borderWidth="2dp"
                fancy:fb_focusColor="@color/colorPrimary"
                fancy:fb_defaultColor="@color/colorPrimaryMid"
                fancy:fb_radius="30dp"
                fancy:fb_text="@string/login_signup"
                fancy:fb_textColor="#FFFFFF"
                fancy:fb_textSize="18dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/password_re_edit"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>